Fixing waveUI widgets and adding CSS files.

--- a/pyofwave_client/css/wave.css
+++ b/pyofwave_client/css/wave.css
@@ -1,1 +1,7 @@
-/*If you are placing this tool on a website, you are encouraged to overwrite this file. In the project, it will be minimal.*/
+/*This file provides more static stylings for the client frame.*/
+
+/*--Inbox stylings.--*/
+
+/*--Wave list styling.--*/
+
+/*--Wave styling.--*/
