--- a/sketches/desktop/grey-style.css
+++ b/sketches/desktop/grey-style.css
@@ -39,7 +39,7 @@
 }
 
 /* Image Sprites for toolbars*/
-#client .buttons a, #client .ParticipantsBar li.add {
+#client .buttons a, #client .ParticipantsBar .add {
 	height: 48px;
 	width: 48px;
 	cursor: pointer;
