Edited sketches/desktop/wave.css via GitHub

--- a/sketches/desktop/wave.css
+++ b/sketches/desktop/wave.css
@@ -94,7 +94,7 @@ ul.ParticipantsBar li.sep {
 	background-color: black;
 }
 
-.WaveletView > .ThreadView {
+.WaveletView > .ThreadView, .WaveletView > .ThreadView > ul {
    padding: 0px; margin: 0px;
 }
 
