--- a/sketches/desktop/wave.css
+++ b/sketches/desktop/wave.css
@@ -13,10 +13,10 @@
 .ThreadView > ul {
    padding-top: 5px; padding-bottom: 5px;
 
-   transition: all 1s ease;
-   -moz-transition: all 1s ease;
-   -webkit-transition: all 1s ease;
-   -o-transition: all 1s ease;
+   transition: height 1s ease;
+   -moz-transition: height 1s ease;
+   -webkit-transition: height 1s ease;
+   -o-transition: height 1s ease;
 }
 .ThreadView {padding: 0px;}
 
