--- a/site.css
+++ b/site.css
@@ -11,7 +11,7 @@ ul#nav {
 }
 ul#nav li {display : inline; list-style-marker : none;}
 ul#nav a {color: #f00; font-weight: normal;}
-ul#nav * {before: "|";}
+ul#nav *:before {content: "|";}
 
 .footer { text-align:center; padding-top:30px; font-style: italic; }
 
