Further altering the footer style.

--- a/site.css
+++ b/site.css
@@ -19,7 +19,7 @@ ul#nav > *:after {content: " |";}
 
   font-style: italic;
   font-weight: bold;
-  color: #f00;
+  color: #810000;
 }
 
 /* content styles.*/
